Revision history for JSON-Schema-Modern

{{$NEXT}}

0.593     2024-10-14 18:43:23Z
          - fix new integer type tests that fail on perls < 5.35.9

0.592     2024-10-13 19:43:20Z
          - support added for the draft4, draft6 specification versions

0.591     2024-10-06 21:06:15Z
          - new --dump-identifiers option in json-schema-eval executable
          - the document form of 'add_schema' has been extracted out into
            'add_document', with the old form deprecated
          - is_equal() utility function, and the const and enum keywords, now
            provide more detailed error diagnostics
          - fix "strict" mode for draft7 documents

0.590     2024-09-07 00:48:50Z
          - "strict" mode is now recognized by validate_schema(), to report on
            any unrecognized keywords used in the schema being validated

0.589     2024-07-06 21:07:44Z
          - skip unpassable tests when ivsize < 8

0.588     2024-06-28 17:14:22Z
          - bump required version of Math::BigInt for bdiv, bmod fixes

0.587     2024-06-26 22:55:11Z
          - fix multipleOf test that fails on some peculiar architectures
          - document the use of Sereal for caching large evaluator objects

0.586     2024-06-23 18:46:01Z
          - simplification of calculation for "multipleOf" keyword

0.585     2024-06-19 04:03:36Z
          - make use of core bool functionality where it exists (perl 5.36+)

0.584     2024-05-18 21:06:35Z
          - add 'get_entity_locations' helper sub to ::Document

0.583     2024-03-30 17:56:17Z
          - further optimization of error and annotation construction, which
            should significantly improve evaluation performance of large
            documents which heavily use the 'unevaluated*' keywords (such as a
            schema evaluated against its metaschema, or an OpenAPI document
            evaluated against its schema)

0.582     2024-01-23 03:18:31Z